--- a/Dashboard/bower.json
+++ b/Dashboard/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap": "~3.2.0",
     "fontawesome": "~4.1.0",
-    "ionicons": "~2.0.0"
+    "ionicons": "~2.0.0",
+    "sparklines": "~1.0.0"
   }
 }
